--- a/python/docs/source/getting_started/quickstart.ipynb
+++ b/python/docs/source/getting_started/quickstart.ipynb
@@ -9,9 +9,9 @@
     "This is a short introduction and quickstart for the PySpark DataFrame API. PySpark DataFrames are lazily evaluated. They are implemented on top of [RDD](https://spark.apache.org/docs/latest/rdd-programming-guide.html#overview)s. When Spark [transforms](https://spark.apache.org/docs/latest/rdd-programming-guide.html#transformations) data, it does not immediately compute the transformation but plans how to compute later. When [actions](https://spark.apache.org/docs/latest/rdd-programming-guide.html#actions) such as `collect()` are explicitly called, the computation starts.\n",
     "This notebook shows the basic usages of the DataFrame, geared mainly for new users. You can run the latest version of these examples by yourself on a live notebook [here](https://mybinder.org/v2/gh/databricks/apache/master?filepath=python%2Fdocs%2Fsource%2Fgetting_started%2Fquickstart.ipynb).\n",
     "\n",
-    "There are also other useful information in Apache Spark documentation site, see the latest version of [Spark SQL and DataFrames](https://spark.apache.org/docs/latest/sql-programming-guide.html), [RDD Programming Guide](https://spark.apache.org/docs/latest/rdd-programming-guide.html), [Structured Streaming Programming Guide](https://spark.apache.org/docs/latest/structured-streaming-programming-guide.html), [Spark Streaming Programming Guide](https://spark.apache.org/docs/latest/streaming-programming-guide.html) and [Machine Learning Library (MLlib) Guide](https://spark.apache.org/docs/latest/ml-guide.html).\n",
+    "There is also other useful information in Apache Spark documentation site, see the latest version of [Spark SQL and DataFrames](https://spark.apache.org/docs/latest/sql-programming-guide.html), [RDD Programming Guide](https://spark.apache.org/docs/latest/rdd-programming-guide.html), [Structured Streaming Programming Guide](https://spark.apache.org/docs/latest/structured-streaming-programming-guide.html), [Spark Streaming Programming Guide](https://spark.apache.org/docs/latest/streaming-programming-guide.html) and [Machine Learning Library (MLlib) Guide](https://spark.apache.org/docs/latest/ml-guide.html).\n",
     "\n",
-    "Usually PySaprk applications start with initializing `SparkSession` which is the entry point of PySpark as below. In case of running it in PySpark shell via <code>pyspark</code> executable, the shell automatically creates the session in the variable <code>spark</code> for users."
+    "PySaprk applications start with initializing `SparkSession` which is the entry point of PySpark as below. In case of running it in PySpark shell via <code>pyspark</code> executable, the shell automatically creates the session in the variable <code>spark</code> for users."
    ]
   },
   {
@@ -34,7 +34,7 @@
     "A PySpark DataFrame can be created via `pyspark.sql.SparkSession.createDataFrame` typically by passing a list of lists, tuples, dictionaries and `pyspark.sql.Row`s, a [pandas DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) and an RDD consisting of such a list.\n",
     "`pyspark.sql.SparkSession.createDataFrame` takes the `schema` argument to specify the schema of the DataFrame. When it is omitted, PySpark infers the corresponding schema by taking a sample from the data.\n",
     "\n",
-    "The example below creates a PySpark DataFrame from a list of rows"
+    "Firstly, you can create a PySpark DataFrame from a list of rows"
    ]
   },
   {
@@ -54,14 +54,14 @@
     }
    ],
    "source": [
-    "import datetime\n",
+    "from datetime import datetime, date\n",
     "import pandas as pd\n",
     "from pyspark.sql import Row\n",
     "\n",
     "df = spark.createDataFrame([\n",
-    "    Row(a=1, b=2., c='string1', d=datetime.date(2000, 1, 1), e=datetime.datetime(2000, 1, 1, 12, 0)),\n",
-    "    Row(a=2, b=3., c='string2', d=datetime.date(2000, 2, 1), e=datetime.datetime(2000, 1, 2, 12, 0)),\n",
-    "    Row(a=4, b=5., c='string3', d=datetime.date(2000, 3, 1), e=datetime.datetime(2000, 1, 3, 12, 0))\n",
+    "    Row(a=1, b=2., c='string1', d=date(2000, 1, 1), e=datetime(2000, 1, 1, 12, 0)),\n",
+    "    Row(a=2, b=3., c='string2', d=date(2000, 2, 1), e=datetime(2000, 1, 2, 12, 0)),\n",
+    "    Row(a=4, b=5., c='string3', d=date(2000, 3, 1), e=datetime(2000, 1, 3, 12, 0))\n",
     "])\n",
     "df"
    ]
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a PySpark DataFrame with the schema."
+    "Create a PySpark DataFrame with an explicit schema."
    ]
   },
   {
@@ -91,9 +91,9 @@
    ],
    "source": [
     "df = spark.createDataFrame([\n",
-    "    (1, 2., 'string1', datetime.date(2000, 1, 1), datetime.datetime(2000, 1, 1, 12, 0)),\n",
-    "    (2, 3., 'string2', datetime.date(2000, 2, 1), datetime.datetime(2000, 1, 2, 12, 0)),\n",
-    "    (3, 4., 'string3', datetime.date(2000, 3, 1), datetime.datetime(2000, 1, 3, 12, 0))\n",
+    "    (1, 2., 'string1', date(2000, 1, 1), datetime(2000, 1, 1, 12, 0)),\n",
+    "    (2, 3., 'string2', date(2000, 2, 1), datetime(2000, 1, 2, 12, 0)),\n",
+    "    (3, 4., 'string3', date(2000, 3, 1), datetime(2000, 1, 3, 12, 0))\n",
     "], schema='a long, b double, c string, d date, e timestamp')\n",
     "df"
    ]
@@ -126,8 +126,8 @@
     "    'a': [1, 2, 3],\n",
     "    'b': [2., 3., 4.],\n",
     "    'c': ['string1', 'string2', 'string3'],\n",
-    "    'd': [datetime.date(2000, 1, 1), datetime.date(2000, 2, 1), datetime.date(2000, 3, 1)],\n",
-    "    'e': [datetime.datetime(2000, 1, 1, 12, 0), datetime.datetime(2000, 1, 2, 12, 0), datetime.datetime(2000, 1, 3, 12, 0)]\n",
+    "    'd': [date(2000, 1, 1), date(2000, 2, 1), date(2000, 3, 1)],\n",
+    "    'e': [datetime(2000, 1, 1, 12, 0), datetime(2000, 1, 2, 12, 0), datetime(2000, 1, 3, 12, 0)]\n",
     "})\n",
     "df = spark.createDataFrame(pandas_df)\n",
     "df"
@@ -158,9 +158,9 @@
    ],
    "source": [
     "rdd = spark.sparkContext.parallelize([\n",
-    "    (1, 2., 'string1', datetime.date(2000, 1, 1), datetime.datetime(2000, 1, 1, 12, 0)),\n",
-    "    (2, 3., 'string2', datetime.date(2000, 2, 1), datetime.datetime(2000, 1, 2, 12, 0)),\n",
-    "    (3, 4., 'string3', datetime.date(2000, 3, 1), datetime.datetime(2000, 1, 3, 12, 0))\n",
+    "    (1, 2., 'string1', date(2000, 1, 1), datetime(2000, 1, 1, 12, 0)),\n",
+    "    (2, 3., 'string2', date(2000, 2, 1), datetime(2000, 1, 2, 12, 0)),\n",
+    "    (3, 4., 'string3', date(2000, 3, 1), datetime(2000, 1, 3, 12, 0))\n",
     "])\n",
     "df = spark.createDataFrame(rdd, schema=['a', 'b', 'c', 'd', 'e'])\n",
     "df"
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, you can enable `spark.sql.repl.eagerEval.enabled` configuration for the eager evaluation of PySpark DataFrame in notebooks such as Jupyter. The number of rows to show can be controled via `spark.sql.repl.eagerEval.maxNumRows` configuration."
+    "Alternatively, you can enable `spark.sql.repl.eagerEval.enabled` configuration for the eager evaluation of PySpark DataFrame in notebooks such as Jupyter. The number of rows to show can be controlled via `spark.sql.repl.eagerEval.maxNumRows` configuration."
    ]
   },
   {
@@ -385,7 +385,7 @@
     }
    ],
    "source": [
-    "df.describe().show()"
+    "df.select(\"a\", \"b\", \"c\").describe().show()"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PySpark DataFrame also provides the conversion back to a [pandas DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) in order to leverage pandas APIs. Note that `toPandas` also collects all data into the driver side that can easily cause an out-of-memory-error when the data is too large to fit into the driver side."
+    "PySpark DataFrame also provides the conversion back to a [pandas DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) to leverage pandas APIs. Note that `toPandas` also collects all data into the driver side that can easily cause an out-of-memory-error when the data is too large to fit into the driver side."
    ]
   },
   {
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to select rows instead of columns, use `DataFrame.filter()`."
+    "To select a subset of rows, use `DataFrame.filter()`."
    ]
   },
   {
@@ -760,7 +760,7 @@
     "## Grouping Data\n",
     "\n",
     "PySpark DataFrame also provides a way of handling grouped data by using the common approach, split-apply-combine strategy.\n",
-    "It groups the data by a certain condition, applies a function to each group, and then combines them back to the DataFrame."
+    "It groups the data by a certain condition applies a function to each group and then combines them back to the DataFrame."
    ]
   },
   {
@@ -800,7 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grouping and then applying the avg() function to the resulting groups."
+    "Grouping and then applying the `avg()` function to the resulting groups."
    ]
   },
   {
